# ED_Joy

./: .gitignore  LICENSE  README.md  build.bat  build.py  build_folder.bat  ed_joy.spec  ed_joy_onefile.spec  ed_joy_onefolder.spec  main.py  pyproject.toml  requirements.txt  settings.py  settings.toml1
Utilities/: Emitters.py  Joysticks.py
ed_joy/: __init__.py  core.py  joysticks.py  logs.py  process_monitor.py  settings.py
